[package]
name = "linux-rt"
version = "0.4.1"
edition = "2021"
authors = ["Marc Fischer <marcfir@proton.me>"]
license = "MIT OR Apache-2.0"
description = "Rust friendly wrapper for Linux Real-time functions"
keywords = ["scheduling", "linux", "rt", "real-time"]
categories = ["os::linux-apisos::linux-apissched"]
repository = "https://github.com/marcfir/linux-rt"

[dependencies]
syscalls = { version = "=0.8.1", features = [
    "x86",
    "x86_64",
    "aarch64",
    "riscv64",
] }
bitflags = "2.10"

[dev-dependencies]
libc = { version = "0.2" }
nix = { version = "0.31", features = ["process", "sched", "mman"] }
serde_repr = ">=0.1.5"                                              # Unused but forced for -Z minimal-versions
